# hiro_card_demo

./: .gitignore  CMakeLists.txt  README.md  card_demo_interface.sb3  main.l
hiro_card_demo/: package.xml
hiro_card_demo/launch/: extract_rectangles.launch
hiro_card_demo/msg/: CardArray.msg
hiro_card_demo/scripts/: check_intersection.py
hiro_card_demo/src/: main.l  scratch-server.l
hiro_card_demo/srv/: Goal.srv
hiro_card_demo_resumption_management/: CMakeLists.txt  package.xml
hiro_card_demo_resumption_management/euslisp/: hiro-card-demo-action-server-setup.l  hiro-card-demo-action-server.l  hironxjsk-card-interface.l
hiro_card_demo_resumption_management/launch/: hiro_card_demo_server.launch
hiro_card_demo_resumption_management/models/: hiro_card_demo.xml
hiro_card_demo_resumption_management/src/: hiro_card_demo.cpp
launch/: start.launch
msg/: Card.msg
scripts/: interrupt.py  stopper.py
src/: card_demo_interface.sb3  main.l
